...
    return meals.toList();
  }

  static List<Meal> loadDessertList() {
    final meals = <Meal> [
      Meal(
        strMeal: "Apple & Blackberry Crumble",
        strMealThumb: "https://www.themealdb.com/images/media/meals/xvsurr1511719182.jpg",
        idMeal: "52893",
        strInstructions: "Heat oven to 190C/170C fan/gas 5. Tip the flour and sugar into a large bowl. Add the butter, then rub into the flour using your fingertips to make a light breadcrumb texture. Do not overwork it or the crumble will become heavy. Sprinkle the mixture evenly over a baking sheet and bake for 15 mins or until lightly coloured.\r\nMeanwhile, for the compote, peel, core and cut 
      ),
      Meal(
        strMeal: "Apple Frangipan Tart",
        strMealThumb: "https://www.themealdb.com/images/media/meals/wxywrq1468235067.jpg",
        idMeal: "52768",
...
