...
    super.initState();
  }

  @override
  Widget build(BuildContext context) {
    return GridView.count(
      key: Key('gridview_builder'),
      crossAxisCount: 2,
      padding: EdgeInsets.all(4),
      childAspectRatio: 8/9,
      children: List.generate(meals.length, (index){
        return mealCard(context, meals[index], index);
      }),
...
